--- a/src/UI/components/SortArrows/styles.module.scss
+++ b/src/UI/components/SortArrows/styles.module.scss
@@ -25,6 +25,12 @@
       }
     }
   }
+
+  &__label {
+    @include phone {
+      font-size: 12px;
+    }
+  }
 }
 
 .sortArrow {
